Gnome: Fix unreadable text in calendar events in older gnome versions

--- a/gtk-3.0/apps/_gnome.scss
+++ b/gtk-3.0/apps/_gnome.scss
@@ -165,9 +165,13 @@
 /*******************
  * Calendar events *
 ********************/
-.color-light{
-  & label, &.timed label {
-    color: $nord0;
-    opacity:1;
+.color-light {
+  &.timed label {
+    color: $fg_color;
+    opacity: 1;
+  }
+  .week-view &.timed label, & label, .year-view &:not(.timed) label  {
+    color: $selected_fg_color;
+    opacity: 1;
   }
 }
